update spacing in minor nav. fix lower logo width

--- a/src/sass/modules/footer/_footer.sass
+++ b/src/sass/modules/footer/_footer.sass
@@ -23,6 +23,7 @@ footer
 
 		+media("<=tablet")
 			display: inline-block
+			width: auto
 
 			.logo__stacked
 				display: inline-block
